--- a/lr5.00e-03_hs32_ctx-p1/valid-eval.props
+++ b/lr5.00e-03_hs32_ctx-p1/valid-eval.props
@@ -5,15 +5,15 @@
 -	*
 -	*)
 desconhecer	(V*)
--	*
--	(AM-LOC*
--	*
--	*
--	*
--	*
--	*
--	*)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -31,6 +31,10 @@ desconhecer	(V*)
 
 -	*
 -	*
+-	(A0*
+-	*
+-	*
+-	*)
 -	*
 -	*
 -	*
@@ -44,14 +48,10 @@ desconhecer	(V*)
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 apontar	(V*)
 -	(A1*
 -	*
@@ -71,17 +71,17 @@ sonhar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
 -	*
+-	(A1*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -99,13 +99,13 @@ sonhar	(V*)
 chegar	(V*)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 passar	(V*)
@@ -135,8 +135,8 @@ passar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A0*
+-	*)
 -	(AM-REC*)
 realizar	(V*)
 -	*
@@ -152,12 +152,12 @@ realizar	(V*)
 
 -	*
 -	*
+-	(A0*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -166,9 +166,9 @@ trazer	(V*)
 -	*
 -	*)
 -	*
+-	(A4*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -181,23 +181,23 @@ trazer	(V*)
 -	*
 -	(A0*)
 vir	(V*)
--	(A1*
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	(AM-ADV*)
@@ -227,10 +227,10 @@ suspeitar	(V*)
 -	*
 -	*
 -	(A1*
--	*)
+-	*
 -	*
 morrer	*
--	*
+-	*)
 -	*
 
 -	(A1*)
@@ -275,8 +275,8 @@ subir	(V*)
 
 -	(A0*
 -	*)
-pedir	*
--	*
+pedir	(V*)
+-	(A1*)
 -	*
 -	*
 -	*
@@ -327,10 +327,10 @@ apurar	(V*)
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
--	*
--	*
+-	*)
 -	(AM-NEG*)
 -	*
 retirar	(V*)
@@ -355,10 +355,10 @@ corrigir	(V*)
 -	*
 -	*
 
--	(A0*
--	*)
--	*
 -	(A1*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -374,9 +374,9 @@ garantir	(V*)
 -	*)
 -	*
 produzir	(V*)
--	(A0*
--	*)
--	(AM-LOC*
+-	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -411,16 +411,16 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 -	*
 explicar	(V*)
 -	*
 
+-	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	(AM-NEG*)
 -	*
@@ -490,28 +490,28 @@ ter	(V*)
 -	*
 
 -	*
+-	(AM-ADV*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+-	*
+reajustar	(V*)
 -	(A1*
 -	*
 -	*
--	*)
--	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	*
--	*
-reajustar	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	(AM-TMP*
--	*
--	*
 -	*)
 -	*
 -	*
@@ -530,37 +530,37 @@ reajustar	*
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 dizer	(V*)
 -	*
 
 -	*
 beneficiar	(V*)
--	(AM-EXT*
+-	(C-A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
 
 -	*
 -	*
 -	*
--	(AM-TMP*
-demorar	*
 -	*
+demorar	(V*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -572,8 +572,8 @@ demorar	*
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 
 -	*
 -	*
@@ -587,13 +587,13 @@ demorar	*
 receber	(V*)
 -	(A1*
 -	*)
+-	(A2*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 
 -	*
 -	(A0*
@@ -609,22 +609,22 @@ ganhar	(V*)
 ter	(V*)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -640,23 +640,16 @@ ter	(V*)
 
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-dizer	(V*)
 -	(A1*
--	*
 -	*
 -	*
 -	*)
 -	*
 -	*
 -	*
+-	(A1*)
+dizer	(V*)
+-	(A1*
 -	*
 -	*
 -	*
@@ -666,10 +659,17 @@ dizer	(V*)
 -	*
 -	*
 -	*
+-	*)
+-	(A2*
 -	*
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*)
 -	*
 
 -	*
@@ -797,23 +797,23 @@ ir	(V*)
 -	*
 -	*)
 fazer	(V*)
--	(A1*
--	*)
--	(AM-TMP*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
 -	(A4*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -828,8 +828,8 @@ fazer	(V*)
 -	*
 -	*)
 atacar	(V*)
--	(A1*)
--	(AM-TMP*
+-	(A0*)
+-	(AM-EXT*
 -	*)
 -	*
 -	*
@@ -864,28 +864,28 @@ atacar	(V*)
 -	*)
 -	(AM-NEG*)
 ter	(V*)
--	(A1*
+-	(A1*)
+-	(C-A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -896,19 +896,19 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
 -	(A1*
--	*)
 -	*
+-	*
+-	*)
 ficar	(V*)
 -	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	(AM-TMP*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -1097,9 +1097,9 @@ acusar	(V*)
 -	*
 comparecer	(V*)
 -	(AM-TMP*
--	*
 -	*)
 -	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -1118,18 +1118,18 @@ acusar	(V*)
 -	*
 -	*
 condenar	(V*)
--	(AM-LOC*
+-	(A2*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
 -	*
 -	*
 -	*
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1294,6 +1294,7 @@ faltar	(V*)
 -	*
 viver	(V*)
 -	(A1*
+-	*
 -	*)
 -	(A2*
 -	*
@@ -1304,9 +1305,8 @@ viver	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
--	(AM-LOC*
+-	*
 -	*
 -	*
 -	*
@@ -1329,9 +1329,9 @@ viver	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
--	(AM-TMP*
+-	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -1349,8 +1349,8 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 -	*
 
 -	*
@@ -1380,9 +1380,9 @@ dizer	(V*)
 -	*
 -	*
 faltar	(V*)
--	(A1*)
+-	(A1*
 -	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1421,9 +1421,9 @@ renovar	(V*)
 -	(A1*
 -	*
 -	*
--	*
 -	*)
--	(AM-TMP*
+-	(AM-PRD*
+-	*
 -	*
 -	*
 -	*)
@@ -1434,15 +1434,15 @@ renovar	(V*)
 -	(A1*)
 acontecer	(V*)
 -	*
+-	(V*)
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1465,8 +1465,8 @@ acontecer	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 -	*
 afirmar	(V*)
 -	*
@@ -1551,15 +1551,15 @@ ganhar	(V*)
 -	*
 -	*
 -	*
--	*
+-	(A0*)
 disputar	(V*)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -1582,7 +1582,7 @@ disputar	(V*)
 -	*
 -	*
 terminar	(V*)
--	(AM-LOC*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -1617,11 +1617,11 @@ autuar	(V*)
 -	(A0*)
 -	(AM-NEG*)
 apresentar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
--	*)
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*)
 -	*
@@ -1633,8 +1633,8 @@ apresentar	(V*)
 -	(A0*)
 descumprir	(V*)
 -	(A1*
--	*)
 -	*
+-	*)
 -	(AM-TMP*
 -	*
 -	*
@@ -1642,14 +1642,14 @@ descumprir	(V*)
 -	*)
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 chegar	(V*)
 -	(AM-EXT*
@@ -1705,27 +1705,27 @@ instalar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	(A1*
@@ -1779,7 +1779,7 @@ aconselhar	(V*)
 -	*
 -	*
 conversar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -1822,42 +1822,42 @@ perder	(V*)
 -	*
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
-fazer	(V*)
--	(A1*
 -	*)
+fazer	(V*)
+-	(A1*)
+-	(C-A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
+-	*)
 -	*
 
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	(A1*
--	*
--	*
--	*
--	*)
--	*
--	*
 -	*
 criticar	(V*)
 -	*
@@ -1870,13 +1870,13 @@ criticar	(V*)
 cumprir	(V*)
 -	(A1*
 -	*
+-	*)
+-	(AM-CAU*
+-	*
+-	*
 -	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
 -	*
 -	*
 
@@ -1910,8 +1910,8 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 -	*
 
 -	*
@@ -1932,7 +1932,7 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	(V*)
+-	*
 -	(A1*)
 querer	(V*)
 -	*
@@ -1963,7 +1963,7 @@ querer	(V*)
 -	*
 -	*
 simpatizar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2059,8 +2059,8 @@ narrar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*)
 -	*
@@ -2079,9 +2079,9 @@ haver	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
 -	*)
--	*
--	*
 -	*
 
 -	*
@@ -2095,21 +2095,21 @@ haver	(V*)
 -	*
 -	*
 -	*
--	(A1*)
--	(AM-TMP*
+-	(A0*
+-	*
+-	*
 -	*
 -	*)
--	(AM-REC*)
 separar	(V*)
 -	*
 
 -	*
 -	(A1*)
 ocorrer	(V*)
+-	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
 -	(AM-LOC*
 -	*
 -	*
@@ -2119,9 +2119,9 @@ ocorrer	(V*)
 -	*)
 -	*
 
+-	(AM-ADV*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -2165,40 +2165,7 @@ chegar	(V*)
 -	*
 -	*
 dar	(V*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-
--	*
--	*
 -	(A1*
--	*
 -	*
 -	*
 -	*)
@@ -2227,13 +2194,46 @@ dar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
+
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
 expulsar	(V*)
@@ -2315,9 +2315,9 @@ reduzir	(V*)
 -	*)
 -	*
 dizer	(V*)
--	(A0*)
+-	(A0*
 -	*
--	*
+-	*)
 -	*
 
 -	(A1*
@@ -2328,35 +2328,31 @@ estar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -2368,6 +2364,10 @@ estar	(V*)
 -	*
 -	*
 -	(A0*
+-	*
+-	*
+-	*
+-	*
 -	*)
 ir	(V*)
 -	(AM-PNC*
@@ -2427,7 +2427,7 @@ vetar	(V*)
 -	*
 -	*)
 estar	(V*)
--	(AM-LOC*
+-	(A2*
 -	*
 -	*
 -	*
@@ -2440,17 +2440,14 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
 -	*
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*)
 -	*
 
--	(AM-TMP*
--	*
--	*)
 -	*
 -	*
 -	*
@@ -2460,12 +2457,15 @@ estar	(V*)
 -	*
 -	*
 -	*
--	(AM-LOC*
 -	*
 -	*
 -	*
--	*)
+-	*
 -	(A0*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2521,7 +2521,7 @@ firmar	(V*)
 -	*
 -	(A0*)
 valer	(V*)
--	(AM-TMP*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2556,9 +2556,9 @@ crescer	(V*)
 -	*
 -	*
 
--	(AM-LOC*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2634,6 +2634,7 @@ divulgar	(V*)
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
 -	*
@@ -2645,8 +2646,7 @@ divulgar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 demonstrar	(V*)
 -	(A1*
 -	*
@@ -2706,7 +2706,7 @@ conseguir	(V*)
 
 -	*
 estar	(V*)
--	(AM-TMP*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2746,7 +2746,7 @@ estar	(V*)
 -	*
 -	*
 -	*
-escolher	*
+escolher	(V*)
 -	*
 -	*
 -	*
@@ -2766,13 +2766,13 @@ escolher	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
 -	*
@@ -2811,8 +2811,8 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
 -	(A1*
+-	*
 -	*)
 treinar	(V*)
 -	(AM-TMP*
@@ -2820,7 +2820,7 @@ treinar	(V*)
 -	*)
 -	*
 
--	(A1*
+-	(A0*
 -	*
 -	*)
 subir	(V*)
@@ -2830,10 +2830,10 @@ subir	(V*)
 -	*)
 -	*
 
+-	(A0*
 -	*
 -	*
--	*
--	(A0*)
+-	*)
 -	(AM-NEG*)
 falar	(V*)
 -	(A1*
@@ -2853,18 +2853,18 @@ estimular	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
 -	*)
 -	*
--	*
--	*
--	*
 
--	*
--	*
--	*
--	*
--	*
 -	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2910,13 +2910,13 @@ vir	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -2945,6 +2945,7 @@ vir	(V*)
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
 -	*
@@ -2956,10 +2957,9 @@ vir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 compensar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2978,20 +2978,20 @@ haver	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -3061,11 +3061,11 @@ ter	(V*)
 -	*
 -	*
 jogar	(V*)
--	(AM-TMP*
+-	(C-V*)
 -	*
 -	*
 -	*
--	*)
+-	*
 -	*
 -	*
 
@@ -3147,6 +3147,9 @@ estar	(V*)
 -	*
 -	*
 
+-	(A1*
+-	*
+-	*)
 -	*
 -	*
 -	*
@@ -3158,15 +3161,12 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
+-	(A1*
+-	*)
 -	*
 -	*
 iniciar	(V*)
--	(AM-TMP*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -3176,10 +3176,10 @@ iniciar	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
--	*
 -	(A1*
+-	*
+-	*
 -	*
 -	*)
 -	*
@@ -3199,7 +3199,7 @@ inspirar	(V*)
 -	*)
 -	*
 
--	(A1*
+-	(A0*
 -	*
 -	*
 -	*
@@ -3217,8 +3217,8 @@ inspirar	(V*)
 ver	(V*)
 -	(A1*
 -	*
--	*)
--	(AM-MNR*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3254,12 +3254,12 @@ ficar	(V*)
 -	*)
 -	*
 dizer	(V*)
--	(A2*
--	*
--	*
--	*)
--	*
 -	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -3284,7 +3284,7 @@ afirmar	(V*)
 -	*)
 -	*
 
--	*
+-	(A0*)
 -	*
 achar	(V*
 -	*)
@@ -3325,14 +3325,14 @@ dizer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	(A1*
@@ -3364,8 +3364,8 @@ sequestrar	(V*)
 -	*
 -	*
 -	(A0*
--	*)
 -	*
+-	*)
 confundir	(V*)
 -	(AM-MNR*
 -	*)
@@ -3418,9 +3418,9 @@ receber	(V*)
 -	*)
 -	*
 morrer	(V*)
--	(A1*)
+-	(A4*
 -	*
--	*
+-	*)
 -	*
 
 -	(A1*
@@ -3437,13 +3437,13 @@ realizar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*)
 -	*
 
--	(A1*)
+-	(A0*)
 bater	(V*)
 -	(A1*)
 -	*
@@ -3486,7 +3486,7 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	*
+-	(A0*)
 contar	(V*)
 -	(A2*
 -	*
@@ -3526,9 +3526,9 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-PRD*
 -	*
+-	*)
+-	(C-A1*
 -	*
 -	*
 -	*
@@ -3563,9 +3563,9 @@ derrotar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
 -	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3621,7 +3621,7 @@ participar	(V*)
 -	*)
 -	*
 
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3686,17 +3686,17 @@ representar	(V*)
 gostar	(V*)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -3707,12 +3707,12 @@ gostar	(V*)
 resolver	(V*)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -3759,9 +3759,9 @@ encaixar	(V*)
 -	*)
 -	*
 
--	*
+-	(AM-ADV*)
 ter	(V*)
--	(AM-EXT*
+-	(AM-MNR*
 -	*
 -	*)
 -	*
@@ -3873,22 +3873,22 @@ desestimular	(V*)
 -	*)
 -	*
 
--	*
+-	(A1*)
 -	*
 oferecer	(V*)
 -	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 causar	(V*)
@@ -3900,21 +3900,21 @@ causar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
--	(AM-CAU*
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3987,7 +3987,7 @@ chegar	(V*)
 -	*
 -	*
 sair	(V*)
--	(AM-TMP*
+-	(A2*
 -	*
 -	*
 -	*)
@@ -4009,22 +4009,22 @@ fazer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -4054,11 +4054,11 @@ fazer	(V*)
 -	*
 -	(A0*)
 pagar	(V*)
+-	(A2*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -4104,21 +4104,21 @@ pôr	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -4187,9 +4187,9 @@ dirigir	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
 -	*)
--	*
--	*
 -	*
 -	*
 -	*
@@ -4227,14 +4227,14 @@ estar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -4248,12 +4248,12 @@ estar	(V*)
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	(AM-NEG*)
 resistir	(V*)
 -	(A2*
@@ -4311,6 +4311,48 @@ pagar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+filmar	(V*)
+-	(A1*
 -	*)
 -	*
 -	*
@@ -4322,68 +4364,26 @@ pagar	(V*)
 -	*
 
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-filmar	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
-
--	*
--	*
--	*
+-	(A1*
+-	*)
 -	*
 -	*
 -	*
 -	*
 -	*
 fazer	(V*)
--	(A1*
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*)
--	(AM-LOC*
--	*
--	*
--	*
--	*
--	*)
--	*
--	*
 -	*
 -	*
 -	*
@@ -4395,6 +4395,7 @@ fazer	(V*)
 -	*
 -	*
 
+-	(AM-ADV*
 -	*
 -	*
 -	*
@@ -4403,9 +4404,6 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	(A1*
 -	*
 -	*
 -	*
@@ -4415,8 +4413,10 @@ fazer	(V*)
 -	*
 -	*
 -	*)
+-	(A0*
 -	*
 -	*
+-	*)
 confirmar	(V*)
 -	(A1*
 -	*
@@ -4463,12 +4463,12 @@ ver	(V*)
 -	(A0*
 -	*)
 jogar	(V*)
--	(A1*)
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*
+-	*)
 -	*
 
 vencer	(V*)
@@ -4480,6 +4480,7 @@ vencer	(V*)
 
 -	(AM-ADV*)
 bastar	(V*)
+-	(A1*
 -	*
 -	*
 -	*
@@ -4494,8 +4495,7 @@ bastar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -4521,7 +4521,7 @@ chegar	(V*)
 -	(A0*
 -	*)
 ancorar	(V*)
--	(AM-LOC*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -4588,7 +4588,7 @@ querer	(V*)
 -	*)
 -	*
 ir	(V*)
--	(AM-LOC*
+-	(A1*
 -	*
 -	*
 -	*
@@ -4609,6 +4609,19 @@ dispensar	(V*)
 -	*
 -	*
 -	*
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	(C-A1*
 -	*
 -	*
 -	*
@@ -4620,20 +4633,7 @@ dispensar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
 -	(AM-TMP*)
@@ -4696,7 +4696,7 @@ chegar	(V*)
 -	(A0*
 -	*)
 discordar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -4713,7 +4713,7 @@ discordar	(V*)
 -	*
 -	*
 jogar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -4730,8 +4730,8 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
--	(A0*)
+-	(A0*
+-	*)
 apreciar	(V*)
 -	(A1*)
 -	*
@@ -4749,12 +4749,12 @@ apreciar	(V*)
 -	*)
 -	(AM-NEG*)
 existir	(V*)
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -4819,8 +4819,8 @@ aparecer	(V*)
 -	*
 -	*
 -	*
--	*
 -	(A0*
+-	*
 -	*)
 querer	(V*)
 -	(A1*
@@ -4846,17 +4846,17 @@ querer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	(A0*)
@@ -4878,8 +4878,8 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A1*
+-	*)
 -	(AM-PNC*
 -	*
 -	*)
@@ -4894,14 +4894,14 @@ formar	(V*)
 -	*
 -	(A0*)
 ter	(V*)
--	(A1*)
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
+-	*)
 
 -	(A0*
 -	*)
@@ -4959,8 +4959,8 @@ abastecer	(V*)
 -	(A1*
 -	*
 -	*
--	*)
--	(AM-TMP*
+-	*
+-	*
 -	*
 -	*)
 -	*
@@ -4991,8 +4991,8 @@ abastecer	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 -	*
 dizer	(V*)
 -	(A0*
@@ -5083,9 +5083,9 @@ estimular	(V*)
 -	*
 -	*
 -	*
+-	(A1*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -5104,8 +5104,8 @@ estimular	(V*)
 -	*
 -	*
 promover	(V*)
--	(C-V*)
 -	(A1*
+-	*
 -	*
 -	*)
 -	*
