target: IOB fixed

--- a/lr5.00e-03_hs32_ctx-p1/valid-eval.props
+++ b/lr5.00e-03_hs32_ctx-p1/valid-eval.props
@@ -29,15 +29,15 @@ desconhecer	(V*)
 -	*)
 -	*
 
+-	(A0*
 -	*
 -	*
 -	*
 -	*
+-	*)
 -	*
 -	*
--	*
--	*
--	(AM-TMP*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -49,8 +49,8 @@ desconhecer	(V*)
 -	*)
 -	*
 -	(A0*
--	*)
--	(AM-ADV*
+-	*
+-	*
 -	*)
 apontar	(V*)
 -	(A1*
@@ -66,8 +66,8 @@ apontar	(V*)
 sonhar	(V*)
 -	(AM-MNR*
 -	*
--	*)
 -	*
+-	*)
 -	*
 -	(AM-MNR*
 -	*
@@ -115,18 +115,18 @@ passar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -136,12 +136,12 @@ passar	(V*)
 -	*
 -	*
 -	(A1*
+-	*
 -	*)
--	(V*)
-realizar	(C-V*)
+realizar	(V*)
 -	*
--	*
--	*
+-	(AM-MNR*
+-	*)
 -	*
 -	*
 -	*
@@ -181,26 +181,26 @@ trazer	(V*)
 -	*
 -	(A0*)
 vir	(V*)
--	(A1*
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*)
 -	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
--	(AM-ADV*)
+-	(AM-LOC*)
 haver	(V*)
 -	(A1*
 -	*
@@ -229,8 +229,8 @@ suspeitar	(V*)
 -	(A1*
 -	*)
 -	*
-morrer	*
--	*
+morrer	(V*)
+-	(AM-ADV*)
 -	*
 
 -	(A1*)
@@ -277,13 +277,13 @@ subir	(V*)
 -	*)
 pedir	(V*)
 -	(A1*)
--	(V*)
 -	(A2*
 -	*
 -	*
 -	*
 -	*)
 -	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -331,7 +331,7 @@ apurar	(V*)
 -	*
 -	*
 -	*)
--	*
+-	(AM-NEG*)
 -	*
 retirar	(V*)
 -	(A1*
@@ -384,11 +384,11 @@ produzir	(V*)
 -	*
 -	*)
 -	*
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -404,8 +404,8 @@ ter	(V*)
 -	*
 -	*
 
--	*
 -	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -425,9 +425,9 @@ explicar	(V*)
 -	(AM-NEG*)
 -	*
 fixar	(V*)
--	(AM-LOC*)
+-	(AM-LOC*
+-	*)
 -	(AM-PNC*
--	*
 -	*
 -	*
 -	*)
@@ -489,7 +489,7 @@ ter	(V*)
 -	*)
 -	*
 
--	(A1*
+-	(A0*
 -	*
 -	*
 -	*
@@ -502,13 +502,13 @@ ter	(V*)
 -	*)
 -	*
 -	*
-reajustar	*
+reajustar	(V*)
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -562,10 +562,10 @@ beneficiar	(V*)
 demorar	(V*)
 -	(AM-TMP*
 -	*
+-	*
+-	*
 -	*)
 -	(A3*
--	*
--	*
 -	*
 -	*
 -	*
@@ -588,11 +588,11 @@ receber	(V*)
 -	(A1*
 -	*)
 -	*
+-	(A4*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	(A0*
@@ -613,29 +613,29 @@ ter	(V*)
 -	*
 -	(AM-LOC*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
+-	(AM-MNR*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 -	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -647,7 +647,7 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
+-	(A1*)
 dizer	(V*)
 -	(A0*
 -	*
@@ -667,16 +667,16 @@ dizer	(V*)
 -	*
 -	*)
 -	*
+-	(AM-MNR*
 -	*
--	*
--	*
+-	*)
 -	*
 
--	*
--	*
+-	(AM-LOC*
+-	*)
 -	*
 ter	(V*)
--	(A1*
+-	(A3*
 -	*
 -	*)
 -	*
@@ -685,7 +685,8 @@ ter	(V*)
 -	(A0*)
 atribuir	(V*)
 -	(A1*
--	*
+-	*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -697,7 +698,6 @@ atribuir	(V*)
 -	*
 -	*
 -	*)
--	*
 -	*
 
 -	*
@@ -731,9 +731,9 @@ receber	(V*)
 -	*)
 -	*
 -	*
+-	(AM-TMP*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -749,35 +749,35 @@ receber	(V*)
 -	(A0*)
 ver	(V*)
 -	(A1*
--	*
 -	*)
+-	(AM-MNR*)
 -	*
 
 -	*
 -	*
 -	*
 -	*
--	*
+-	(A0*)
 -	*
 -	(A1*
 -	*)
 esperar	(V*)
 -	*
 
--	(A1*
+-	(A0*
 -	*)
--	(V*)
-aproximar	(C-V*)
+-	(AM-REC*)
+aproximar	(V*)
 -	*
 
 -	(A0*)
 precisar	(V*)
--	(A1*
+-	(A3*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*
 -	*)
@@ -805,6 +805,13 @@ fazer	(V*)
 -	*
 -	*
 -	*
+-	(AM-TMP*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	(A0*
 -	*
 -	*
 -	*
@@ -814,14 +821,7 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
 -	(A0*
@@ -829,11 +829,13 @@ fazer	(V*)
 -	*)
 atacar	(V*)
 -	(A0*)
--	(AM-TMP*)
+-	(AM-TMP*
 -	*
--	*
--	*
+-	*)
 -	(AM-CAU*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -842,8 +844,6 @@ atacar	(V*)
 -	*
 -	*)
 -	(A2*
--	*
--	*
 -	*
 -	*
 -	*
@@ -888,9 +888,9 @@ ter	(V*)
 -	*)
 -	*
 
--	(A1*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -907,8 +907,8 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-TMP*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1212,7 +1212,7 @@ ficar	(V*)
 -	*)
 -	*
 
--	(A0*
+-	(A1*
 -	*)
 começar	(V*)
 -	(AM-TMP*
@@ -1293,12 +1293,20 @@ faltar	(V*)
 -	*
 -	*
 viver	(V*)
--	(C-V*
+-	(A2*
+-	*
+-	*
+-	*)
+-	(AM-TMP*
+-	*
+-	*
+-	*
 -	*
 -	*)
 -	*
 -	*
 -	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1306,15 +1314,7 @@ viver	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
 -	(A0*
@@ -1343,13 +1343,13 @@ dizer	(V*)
 -	*
 -	*
 -	*
+-	(AM-CAU*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 
@@ -1358,13 +1358,13 @@ dizer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
 -	(AM-TMP*
+-	*
 -	*
 -	*
 -	*
@@ -1380,17 +1380,17 @@ dizer	(V*)
 -	*
 -	*
 faltar	(V*)
--	(A0*
+-	(A1*
+-	*
+-	*
+-	*
 -	*
 -	*)
 -	*
 -	*
--	*
--	*
--	*
 
 -	(A0*)
--	(AM-ADV*)
+-	(AM-NEG*)
 ter	(V*)
 -	(A1*
 -	*
@@ -1435,16 +1435,16 @@ renovar	(V*)
 acontecer	(V*)
 -	*
 -	*
--	(A1*
+-	(AM-ADV*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -1522,9 +1522,9 @@ ganhar	(V*)
 -	*)
 -	*
 -	*
+-	(AM-LOC*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1547,7 +1547,7 @@ ganhar	(V*)
 -	*
 -	*
 -	*
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*)
 -	*
@@ -1556,15 +1556,16 @@ disputar	(V*)
 -	(A1*
 -	*)
 -	*
+-	(AM-MNR*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	(AM-TMP*
 -	*)
 -	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1573,8 +1574,7 @@ disputar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1582,7 +1582,7 @@ disputar	(V*)
 -	*
 -	*
 terminar	(V*)
--	(AM-MNR*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -1590,18 +1590,18 @@ terminar	(V*)
 -	(A0*)
 multar	(V*)
 -	(A1*
+-	*
+-	*
 -	*)
 -	(AM-LOC*
--	*
--	*
 -	*
 -	*)
 
 -	(A0*
 -	*
 -	*
--	*
 -	*)
+-	*
 autuar	(V*)
 -	(A1*
 -	*
@@ -1635,11 +1635,11 @@ descumprir	(V*)
 -	(A1*
 -	*)
 -	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -1671,9 +1671,9 @@ chegar	(V*)
 aplicar	(V*)
 -	(A1*
 -	*)
+-	(AM-LOC*
+-	*)
 -	(A0*
--	*
--	*
 -	*)
 -	(AM-TMP*
 -	*
@@ -1686,8 +1686,8 @@ aplicar	(V*)
 -	(A0*)
 produzir	(V*)
 -	(A1*)
--	(AM-TMP*)
--	(C-AM-TMP*
+-	(AM-TMP*
+-	*
 -	*)
 
 -	(A0*
@@ -1715,8 +1715,8 @@ instalar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1739,10 +1739,10 @@ tomar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
 -	*)
 -	(AM-TMP*
--	*
--	*
 -	*)
 -	*
 
@@ -1779,14 +1779,14 @@ aconselhar	(V*)
 -	*
 -	*
 conversar	(V*)
--	(AM-TMP*
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
--	(AM-TMP*)
 -	*
 
 -	*
@@ -1816,7 +1816,7 @@ reverter	(V*)
 -	*
 -	*
 -	*
--	(A1*
+-	(A0*
 -	*)
 perder	(V*)
 -	*
@@ -1831,11 +1831,11 @@ perder	(V*)
 -	*
 -	*
 fazer	(V*)
--	(A1*
--	*)
 -	(A3*
--	*)
 -	*
+-	*
+-	*
+-	*)
 -	*
 -	*
 -	*
@@ -1846,8 +1846,8 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A1*
+-	*)
 -	*
 -	*
 -	(A1*
@@ -1864,19 +1864,19 @@ criticar	(V*)
 
 -	(AM-TMP*)
 -	*
--	*
--	*
+-	(A0*
+-	*)
 -	*
 cumprir	(V*)
 -	(A1*
 -	*)
 -	(AM-MNR*
 -	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
 -	*
 -	*
 
@@ -1886,7 +1886,7 @@ cumprir	(V*)
 -	*
 -	(A0*)
 preferir	(V*)
--	(C-V*)
+-	*
 -	*
 -	*
 -	*
@@ -1899,8 +1899,8 @@ preferir	(V*)
 -	*
 manter	(V*)
 -	(A1*
--	*)
 -	*
+-	*)
 
 -	*
 -	(A0*)
@@ -1963,7 +1963,11 @@ querer	(V*)
 -	*
 -	*
 simpatizar	(V*)
--	(A1*
+-	(AM-LOC*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1980,16 +1984,12 @@ simpatizar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -2021,8 +2021,8 @@ simpatizar	(V*)
 -	*
 -	*
 -	*
+-	(AM-MNR*
 -	*
--	(AM-LOC*
 -	*
 -	*
 -	*
@@ -2030,15 +2030,15 @@ simpatizar	(V*)
 -	*)
 -	*
 -	(A0*
--	*
+-	*)
 ganhar	*
--	*)
--	(A2*
--	*)
 -	*
 -	(AM-MNR*
--	*)
--	(C-A1*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2070,14 +2070,14 @@ haver	(V*)
 -	*
 -	*)
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	(AM-LOC*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2087,12 +2087,12 @@ haver	(V*)
 -	*
 -	*
 -	*
+-	(AM-CAU*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	(A0*
 -	*
 -	*
@@ -2119,9 +2119,9 @@ ocorrer	(V*)
 -	*)
 -	*
 
--	(AM-ADV*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	(V*)
 -	*
@@ -2139,11 +2139,11 @@ colocar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
--	*
--	*
--	*
 -	(A1*)
+-	*
+-	(A1*
+-	*
+-	*)
 -	(AM-MNR*)
 chegar	(V*)
 -	(AM-LOC*
@@ -2157,16 +2157,16 @@ chegar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	(A0*
--	*
--	*
--	*)
--	*
 dar	(V*)
 -	(A1*)
--	(A2*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -2188,9 +2188,9 @@ dar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(A1*
 -	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*)
 -	*
@@ -2256,7 +2256,7 @@ expulsar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	*
 adotar	(V*)
 -	(A1*
 -	*
@@ -2282,15 +2282,15 @@ dar	(V*)
 -	*
 forçar	(V*)
 -	*
+-	(AM-DIS*)
+-	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -2372,18 +2372,18 @@ estar	(V*)
 ir	(V*)
 -	(AM-PNC*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -2408,10 +2408,10 @@ ir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	(A0*
+-	*
+-	*
+-	*
 -	*)
 vetar	(V*)
 -	(A1*
@@ -2440,10 +2440,10 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
 -	*
--	(AM-TMP*
+-	*
+-	*
 -	*
 -	*)
 -	*
@@ -2452,15 +2452,15 @@ estar	(V*)
 -	*
 -	*)
 -	*
--	*
+-	(A0*)
 -	(AM-TMP*
 -	*
--	*
--	*
--	*
 -	*)
--	*
 -	(AM-LOC*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2485,19 +2485,19 @@ firmar	(V*)
 -	(A1*
 -	*
 -	*
--	*
--	*
--	*
 -	*)
 -	(AM-PRD*
+-	*
+-	*
+-	*
 -	*
 -	*)
 -	*
 -	(AM-MNR*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(A1*
 -	*
 -	*
 -	*)
@@ -2536,7 +2536,13 @@ valer	(V*)
 -	(A1*
 -	*)
 crescer	(V*)
--	(A2*
+-	(A3*
+-	*
+-	*
+-	*)
+-	(A4*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -2547,18 +2553,12 @@ crescer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
 -	*
 
+-	(AM-TMP*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -2605,9 +2605,9 @@ divulgar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
--	(A1*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2704,7 +2704,7 @@ conseguir	(V*)
 -	*)
 -	*
 
--	(AM-ADV*)
+-	*
 estar	(V*)
 -	(A1*
 -	*
@@ -2736,9 +2736,9 @@ estar	(V*)
 -	*
 -	*
 -	*
+-	(AM-PRD*
 -	*
 -	*
--	(AM-LOC*
 -	*
 -	*
 -	*)
@@ -2767,9 +2767,9 @@ escolher	(V*)
 -	(A2*
 -	*
 -	*
+-	*
 -	*)
 -	(AM-LOC*
--	*
 -	*)
 -	(A1*
 -	*
@@ -2780,15 +2780,15 @@ escolher	(V*)
 estar	(V*)
 -	(A2*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -2845,11 +2845,11 @@ falar	(V*)
 estimular	(V*)
 -	(A1*
 -	*
--	*)
--	(A2*
 -	*
--	*)
--	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2890,9 +2890,9 @@ trabalhar	(V*)
 -	*)
 -	*
 
+-	(AM-TMP*
 -	*
--	*
--	(AM-DIS*)
+-	*)
 -	*
 -	(C-A0*
 -	*
@@ -2910,9 +2910,9 @@ vir	(AM-TMP*
 -	*
 -	*
 -	*
+-	*)
 -	*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -2933,15 +2933,14 @@ vir	(AM-TMP*
 -	*
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -2955,6 +2954,7 @@ vir	(AM-TMP*
 -	(AM-TMP*
 -	*
 -	*
+-	*
 -	*)
 -	*
 -	*
@@ -2962,8 +2962,8 @@ compensar	(V*)
 -	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*)
 -	*
@@ -3041,8 +3041,8 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(A2*
 -	*)
 -	*
 
@@ -3061,18 +3061,18 @@ ter	(V*)
 -	*)
 -	*
 jogar	(V*)
+-	(AM-TMP*
+-	*)
 -	(A1*
--	*
--	*
 -	*
 -	*
 -	*)
 -	*
 
 -	(AM-DIS*
+-	*
+-	*
 -	*)
--	*
--	*
 -	(AM-NEG*)
 -	*
 avaliar	(V*)
@@ -3092,11 +3092,11 @@ avaliar	(V*)
 -	*)
 -	*
 
+-	(A0*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
+-	(AM-NEG*)
 -	*
 -	*
 -	*
@@ -3127,9 +3127,9 @@ proibir	(V*)
 -	*
 -	*)
 estar	(V*)
--	(A2*)
+-	(A2*
+-	*)
 -	(A1*
--	*
 -	*
 -	*
 -	*
@@ -3184,10 +3184,10 @@ iniciar	(V*)
 -	*)
 -	*
 inspirar	(V*)
--	(AM-TMP*
--	*
--	*)
 -	(AM-LOC*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3203,10 +3203,10 @@ inspirar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
 -	*)
 -	(A0*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3222,9 +3222,9 @@ ver	(V*)
 -	*)
 -	*
 -	*
+-	(A1*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -3237,13 +3237,13 @@ ficar	(V*)
 -	*
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	(A1*
@@ -3254,9 +3254,9 @@ ficar	(V*)
 -	*)
 -	*
 dizer	(V*)
+-	(A2*
+-	*)
 -	(A0*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3275,8 +3275,8 @@ afirmar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -3286,11 +3286,11 @@ afirmar	(V*)
 
 -	(A0*)
 -	*
-achar	*
--	(V*)
--	(AM-LOC*
+achar	(V*)
 -	*
--	*)
+-	*
+-	*
+-	*
 
 -	(A0*)
 encontrar	(V*)
@@ -3298,17 +3298,17 @@ encontrar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -3346,10 +3346,10 @@ sequestrar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
 -	*
--	(A0*
+-	*
+-	*
 -	*)
 -	*
 
@@ -3363,7 +3363,7 @@ sequestrar	(V*)
 -	*
 -	*
 -	*
--	(A0*
+-	(A1*
 -	*)
 -	*
 confundir	(V*)
@@ -3374,9 +3374,9 @@ confundir	(V*)
 -	(A1*)
 -	*
 receber	(V*)
+-	(AM-MNR*
+-	*)
 -	(AM-LOC*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3402,8 +3402,8 @@ receber	(V*)
 -	(AM-LOC*
 -	*
 -	*)
--	*
 -	(A0*
+-	*
 -	*
 -	*
 -	*
@@ -3417,10 +3417,10 @@ receber	(V*)
 -	*
 -	*)
 -	*
-morrer	*
+morrer	(V*)
+-	(A1*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	(A1*
@@ -3430,37 +3430,37 @@ realizar	(V*)
 -	(A0*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(A3*
 -	*)
 -	*
--	(V*)
+-	*
 -	(AM-TMP*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*)
 -	*
 
--	(A0*)
-bater	(V*)
 -	(A1*)
+bater	(V*)
+-	(AM-EXT*
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
+-	(AM-PRD*
+-	*)
 
 -	(A1*)
 -	*
 -	*
 -	*
 ficar	(V*)
--	(A1*
--	*)
--	(AM-LOC*
+-	(AM-MNR*
+-	*
+-	*
 -	*)
 
 -	*
@@ -3486,7 +3486,7 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	(A1*)
 contar	(V*)
 -	(A3*
 -	*
@@ -3513,6 +3513,7 @@ ficar	(V*)
 -	(A1*
 -	*
 -	*)
+-	(A4*
 -	*
 -	*
 -	*
@@ -3521,26 +3522,25 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	(AM-EXT*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*)
+-	(AM-CAU*
 -	*
 -	*
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
 -	*
 
 -	*
@@ -3557,9 +3557,7 @@ ficar	(V*)
 -	*
 -	*
 derrotar	(V*)
--	(AM-LOC*
--	*)
--	(A1*
+-	(AM-TMP*)
 -	*
 -	*
 -	*
@@ -3568,7 +3566,9 @@ derrotar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3594,11 +3594,11 @@ derrotar	(V*)
 -	*
 -	(A0*)
 marcar	(V*)
--	(A1*
+-	(AM-TMP*
 -	*)
 -	*
 
--	(A2*
+-	(AM-ADV*
 -	*
 -	*
 -	*
@@ -3610,8 +3610,8 @@ participar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(C-AM-PRD*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3629,7 +3629,7 @@ participar	(V*)
 -	*
 -	*
 estar	(V*)
--	(C-V*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -3638,7 +3638,7 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*
+-	*)
 -	*
 
 -	(A1*
@@ -3664,16 +3664,16 @@ afirmar	(V*)
 -	*)
 -	*
 
--	(AM-PNC*
--	*)
+-	(AM-CAU*
 -	*
+-	*)
 -	(A0*
 -	*)
 representar	(V*)
 -	(A1*
 -	*
--	*
--	*
+-	*)
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -3690,13 +3690,13 @@ gostar	(V*)
 -	*
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -3725,10 +3725,10 @@ pegar	(V*)
 -	(A1*
 -	*)
 -	*
+-	(AM-PNC*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	*
@@ -3751,7 +3751,7 @@ fazer	(V*)
 -	*)
 -	(V*)
 encaixar	(C-V*)
--	(A1*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -3769,9 +3769,9 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
--	*
 -	(A0*
+-	*
+-	*
 -	*)
 -	*
 denunciar	(V*)
@@ -3779,7 +3779,7 @@ denunciar	(V*)
 -	(A1*
 -	*
 -	*)
--	(AM-MNR*
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -3880,8 +3880,8 @@ oferecer	(V*)
 -	*)
 -	*
 -	(AM-DIS*)
--	(A1*)
 -	(A3*
+-	*
 -	*
 -	*
 -	*
@@ -3893,13 +3893,13 @@ oferecer	(V*)
 
 causar	(V*)
 -	(A1*
--	*)
 -	*
--	(AM-TMP*
 -	*
--	*)
 -	*
--	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3964,12 +3964,12 @@ tratar	(V*)
 chegar	(V*)
 -	(A1*)
 -	*
+-	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	(AM-TMP*
 -	*
@@ -3993,9 +3993,9 @@ sair	(V*)
 -	*)
 -	*
 
+-	(AM-MNR*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -4009,22 +4009,22 @@ fazer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -4086,7 +4086,7 @@ pagar	(V*)
 -	*
 -	*
 -	*
--	(A1*)
+-	*
 -	*
 -	*
 estar	(V*)
@@ -4104,21 +4104,21 @@ pôr	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -4164,7 +4164,7 @@ interpretar	(V*)
 -	*
 -	(A0*)
 fazer	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4185,8 +4185,8 @@ dirigir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*)
@@ -4199,8 +4199,11 @@ dirigir	(V*)
 -	(AM-DIS*)
 estar	(V*)
 -	(A2*
+-	*)
+-	(C-A2*
 -	*
 -	*)
+-	*
 -	(AM-MNR*
 -	*
 -	*
@@ -4212,27 +4215,24 @@ estar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
+-	(A1*
+-	*
+-	*
+-	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -4246,12 +4246,12 @@ estar	(V*)
 -	*
 -	*
 -	*
+-	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	(AM-NEG*)
@@ -4307,7 +4307,9 @@ resistir	(V*)
 -	*
 -	(A1*)
 pagar	(V*)
--	(A3*
+-	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4315,8 +4317,6 @@ pagar	(V*)
 -	*
 -	*
 -	*)
--	*
--	*
 -	*
 -	*
 -	*
@@ -4352,8 +4352,8 @@ pagar	(V*)
 -	*
 -	(A0*)
 filmar	(V*)
--	*
 -	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -4364,12 +4364,12 @@ filmar	(V*)
 -	*
 
 -	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 fazer	(V*)
 -	(A1*
@@ -4395,31 +4395,31 @@ fazer	(V*)
 -	*
 -	*
 
--	(AM-ADV*
+-	*
+-	(A0*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	*
--	*
--	*
--	*
 -	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	(AM-PRD*
+-	(AM-CAU*
 -	*
 -	*
 -	*)
 -	*
 -	*
 confirmar	(V*)
--	*
 -	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -4510,10 +4510,10 @@ bastar	(V*)
 -	*
 -	(A0*
 -	*)
--	(AM-ADV*)
+-	(AM-NEG*)
 -	*
 chegar	(V*)
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -4527,14 +4527,14 @@ ancorar	(V*)
 -	*
 -	*
 -	*
--	(A1*)
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
+-	*)
 -	*
 
 -	*
@@ -4574,28 +4574,28 @@ haver	(V*)
 querer	(V*)
 -	*
 -	*
+-	(AM-CAU*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
 -	(A1*
 -	*)
 -	*
 ir	(V*)
--	(AM-TMP*
+-	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	*
--	*
 -	*
 
 -	*
@@ -4606,6 +4606,7 @@ ir	(V*)
 -	*)
 dispensar	(V*)
 -	*
+-	(AM-MNR*)
 -	*
 -	*
 -	*
@@ -4620,10 +4621,9 @@ dispensar	(V*)
 -	*
 -	*
 -	*
+-	(AM-EXT*
 -	*
--	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -4640,7 +4640,7 @@ dispensar	(V*)
 -	(A0*
 -	*)
 saber	(V*)
--	(AM-MNR*
+-	(A0*
 -	*
 -	*
 -	*
@@ -4670,8 +4670,8 @@ saber	(V*)
 -	*
 -	(A0*
 -	*
--	*)
 -	*
+-	*)
 -	*
 -	*
 defender	(V*)
@@ -4708,12 +4708,12 @@ discordar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	(A0*)
 jogar	(V*)
--	(A3*
+-	(A2*
 -	*
 -	*)
 -	*
@@ -4750,11 +4750,11 @@ apreciar	(V*)
 -	*
 existir	(V*)
 -	*
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -4768,8 +4768,8 @@ existir	(V*)
 -	*
 -	*
 
--	*
--	*
+-	(A0*
+-	*)
 -	*
 -	*
 -	*
@@ -4791,13 +4791,13 @@ engatinhar	(V*)
 -	*)
 -	*
 
+-	(A0*
+-	*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
+-	(A1*
+-	*)
 -	*
 -	*
 -	*
@@ -4818,10 +4818,10 @@ aparecer	(V*)
 -	*
 -	*
 -	*
+-	(AM-PRD*
 -	*
--	*
--	(A0*
 -	*)
+-	(A0*)
 querer	(V*)
 -	(A1*
 -	*
@@ -4848,15 +4848,15 @@ querer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
+-	(AM-MNR*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 
 -	(A0*)
@@ -4875,10 +4875,10 @@ dizer	(V*)
 -	*)
 -	*
 
+-	*
+-	*
+-	*
 -	(AM-PNC*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -5004,9 +5004,9 @@ dizer	(V*)
 
 haver	(V*)
 -	(A1*
--	*
--	*
--	*
+-	*)
+-	(V*)
+-	(A1*
 -	*
 -	*
 -	*
@@ -5079,13 +5079,13 @@ estimular	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
