issue #10: R is a new target

--- a/datasets/schemas/gs.yaml
+++ b/datasets/schemas/gs.yaml
@@ -49,10 +49,12 @@ MARKER:
 P_S: 
     category: meta
     type: int
+R: 
+    category: target
+    type: choice
 S: 
     category: meta
     type: int
-
 SHALLOW_CHUNKS:
   category: feature
   type: choice
